AUTOMAKE_OPTIONS = dist-bzip2 no-dist-gzip

EXTRA_DIST = emblem-dropbox-syncing.icon emblem-dropbox-syncing.png \
emblem-dropbox-uptodate.icon emblem-dropbox-uptodate.png dropbox.png

emblemdir = $(datadir)/icons/hicolor/64x64/emblems

emblem_DATA = emblem-dropbox-syncing.icon emblem-dropbox-syncing.png \
emblem-dropbox-uptodate.icon emblem-dropbox-uptodate.png \
emblem-dropbox-unsyncable.icon emblem-dropbox-unsyncable.png

menuicondir = $(datadir)/icons/hicolor/16x16/apps

menuicon_DATA = dropbox.png

SUBDIRS = src

